# spec-driven-dev-1

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  claude.yml  deploy.yml  dispatch.yml  review.yml
.specify/memory/: constitution.md
backend/: __init__.py  main.py
backend/services/: data_analyzer.py  data_fetcher.py
frontend/: app.js  index.html  styles.css
specs/001-constitution-compliance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-constitution-compliance/checklists/: requirements.md
specs/001-constitution-compliance/contracts/: api-endpoints.md
tests/: test_backend.py
