[project]
name = "spec-driven-app-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]

[project.scripts]
start = "backend.main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
